fixed: hide word guess input while user form is visible

--- a/app/assets/stylesheets/sechzehn.css.scss
+++ b/app/assets/stylesheets/sechzehn.css.scss
@@ -17,6 +17,10 @@ form {
   padding-bottom: 8px;
 }
 
+div#guess {
+  margin-top: 20px;
+}
+
 .vmiddle {
   vertical-align: middle;
   display: inline-block;
